# ComfyUI_FSR

./: FlashVSR_node.py  README.md  model_loader_utils.py  pyproject.toml  requirements.txt
FlashVSR/: requirements.txt
FlashVSR/diffsynth/models/: wan_video_dit.py
FlashVSR/examples/: config.json
FlashVSR/examples/WanVSR/: infer_flashvsr_full.py  infer_flashvsr_tiny.py
example_workflows/: flashvsr1023.json  flashvsr1023a.json
